--- a/app/views/tenon/tenon_content/_fields.html.haml
+++ b/app/views/tenon/tenon_content/_fields.html.haml
@@ -22,4 +22,4 @@
 
 
     %p
-      = link_to 'Add Content', '#', class: 'action-text initial-row', data: { modal_target: '[data-tn-tc-library]', modal_closest: '.tn-tc', modal_clone: 'true', modal_title: 'Add Content', modal_handler: 'TenonContentLibrary', tn_tc_add_content: true }, title: 'Add Content'
+      = link_to 'Add Content', '#', class: 'action-text initial-row', data: { modal_target: '[data-tn-tc-library]', modal_closest: '.tn-tc', modal_clone: 'true', modal_handler: 'TenonContentLibrary', tn_tc_add_content: true }, title: 'Add Content'
